# kazane

./: .gitignore  .mcp.json  CLAUDE.md  COMMERCIAL-LICENSE.md  GOVERNANCE.md  LICENSE-POLICY.md  NOTICE.md  README.md  README_ja.md  index.html  kazane-agents.yaml  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture-v2.md  architecture.md  chronicle-native-work-extensions.md  chronicle-replay.md  claude-design-wireframe-prompt.md  cognitive-context-design.md  context-preserving-work.md  design-principles.md  development-methodology.md  external-beta-trial.md  feedback-context.md  homepage-content-ja.md  issue-kanban-workflow.md  local-deployment.md  pricing.md  product-candidate-v09.md  product-strategy.md  roadmap.md  runtime.md  security-architecture.md  self-use-levels.md  setup-and-recovery.md  start-guide.md  support-runbook.md  t-rde-policy.md  testing-strategy.md  trust-and-privacy.md  v0.9-local-candidate-rehearsal.md  v0.9-product-candidate-plan.md
docs/adr/: 0001-record-architecture-decisions.md  0002-define-kazane-as-chronicle-driven-intent-os.md  0002-runtime-and-ui-targets.md  0004-agent-organization-model.md  (+16 more)
scripts/: build-candidate  kazane-agent  kazane-agentd  kazane-import-dev  kazane-mcp  kazane-privd  kazane_control.py  kazaned
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: test_agentd.py  test_backup_restore.py  test_control_plane.py  test_github_sync.py
(+25 files in other folders)
