[package]
name = "kazane"
version = "0.7.0"
description = "Kazane — Chronicle Work OS"
authors = ["ZYX Corporation"]
license = "Apache-2.0"
repository = "https://github.com/zyx-corporation/kazane"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kazane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
